rmi connect and show user list