@@ -49,9 +49,12 @@ mainClassName = 'manager.App'
 
 apply plugin: 'application'
 
+applicationDefaultJvmArgs = ["-Djava.security.manager", "-Djava.security.policy=" + file("$projectDir/mysecurity.policy").absolutePath]
+
 task myRun(type: JavaExec) {
   classpath sourceSets.main.runtimeClasspath
   main = 'manager.App'
+  systemProperties 'java.security.policy': file("$projectDir/mysecurity.policy").absolutePath
 }
 
 sourceSets {
